# iot-pi-connector

./: CMakeLists.txt  README.md
main/code/: MQTTAsync.h  MQTTClientPersistence.h  cJSON.c  cJSON.h  cpustat.c  iot.h  iotmain.c  jsonReader.c  jsonator.c  mac.c  mqttPublisher.c
